fix: integração apontamento itens e auditoria.